--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,21 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+
+#############
+## IDEA
+#############
+.idea/
+.idea
+
+#############
+## Project
+#############
+conf.js
+conf.zip
+
+#############
+## Node
+#############
+node_modules/
