--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "uglify-js": "1.2.6",
     "jshint": "0.6.1",
     "recess": "1.0.3",
-    "less-middleware": ">= 0.0.0"
+    "less-middleware": ">= 0.0.0",
+    "fb": "0.0.9"
   },
   "devDependencies": {},
   "optionalDependencies": {},
